2005-10-04  Adam Jocksch  <ajocksch@redhat.com>

	* GladeConstants.java: Deleted.
	
	* SourceWindow.java: Ditto.
	
	* PreferenceWindow.java: Constants refactored back in.
	Renamed constants referring to 'Literals' to refer to 'keywords'.
	
	* glade/frysk_source_prefs.glade: Changed name of literal* widgets to
	keyword*.

2005-10-04  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMImage.java: added addSource() method
	
	* dom/DOMTestDOMFrysk.java: added tests for above

2005-10-03  Adam Jocksch  <ajocksch@redhat.com>

	* GladeConstants.java: Added.
	
	* SourceWindow.java: Refactored constants to GladeConstants.java.
	
	* SourceViewWidget.java: Ditto.
	
	* PreferenceWindow.java: Ditto.
	
	* PreferenceConstants.java: Added.
	
	* SourceViewWidget.javaL Refactored constants to PreferenceConstants.java.

2005-10-03  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: renamed pcValue to value

	* dom/DOMTestDOMFrysk.java: split test suite into 2 new methods:
		testDOMFrysk() and testDOMImage()
		added tests for DOMImage.getCCPath() and DOMImage.getName()

2005-10-03  Adam Jocksch  <ajocksch@redhat.com>

	* SourceWindow.java (launchPreferenceWindow): Now calls refresh in 
	SourceWindow.
	(refresh): Added.
	
	* PreferenceWindow.java (setupButtons): Status of "Show Toolbar" now
	updated.
	(buttonEvent): Status of "Show Toolbar" saved into prefs model.

2005-10-03  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: added addPID() method
						 modified getPID() method
						 
	* dom/DOMTestDOMFrysk.java: added addPPID()/getPID() tests
								added DOMGetImage tests
								made test messages all look similar

2005-10-03  Rick Moseley  <rmoseley@redhat.com>

	* dom/DOMFrysk.java: added addImage() method
						 added checkImageDup() method
						 modified getImage() method
	
	* dom/DOMTestDOMFrysk.java: added tests for above methods plus some others

2005-09-30  Adam Jocksch  <ajocksch@redhat.com>
